progress with js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Word-Guess-Game</title>
+    <title>Looney Tunes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="assests/css/style.css"/>
@@ -30,17 +30,19 @@
                         <h4>Wins:</h4> <div id="wins"></div>
                         <h4>Current Word:</h4> <div id="currentWord"></div>
                         <h4>Losses:</h4> <div id="losses"></div>
-                        <h4>All Guesses:</h4> <div id="Guesses"></div>
+                        <h4>All Guesses:</h4> <div id="guesses"></div>
                     </td>
                 </tr>
             </tbody>
 
         </table>
     </main>
+    <!--Footer-->
     <footer class="footer">
         <div class="container"></div>
     </footer>
-    <script src="game.js"></script>
+    <!--Javascript-->
+    <script src="/assests/javascript/game.js"> type="text/javascript"</script>
    
    <script>
         startGame();
