--- a/index.html
+++ b/index.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="EN-us">
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Looney Tunes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="assests/css/style.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Madagascar!</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="assests/css/style.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 </head>
+
 <body>
-    <header>
-        <div class="header"></div>
-    </header>
-    
-    <main class="container">
+  <header>
+    <div class="header"></div>
+  </header>
+      <main class="container">
         <table class="layout">
-            <thead>
-                <tr>
-                    <th colspan="2"><span class="Guess"></span>
-                        <h1 id ="pressKeyTryAgain"> Press Any Key to Try Again!</h1>
+          <thead>
+            <tr>
+              <th colspan="2"><h1 class="display-1">Madagascar</h1>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <img src="assests/images/madagascar.jpg" alt="img" class="img-fluid" id="showPicture" alt="">
+                </td>
+              <td><h3 style="padding-bottom: 2.5em;">GET STARTED! PRESS ANY KEY</h3>
+                <h3>Guesses Remaining: <span id="showGuessesLeft">9</span></h3>
+                <h4>Current Word</h4>
+                <h3>Wins: <span id="showWins">0</span></h3> 
+                <h3>Losses: <span id="showLosses">0</span></h3> 
+                <h3><span id="showCurrentWord"></span></h3> 
+                <h5>Letters Guessed</h5>
+                <h3><span id="showGuessesAtt"></span></h3> 
 
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="hint"></td>
-                    <td><h3 style="padding-bottom: 5px;"><u>Press any Key start!</u></h3>
-                        <h4>Wins:</h4> <div id="wins"></div>
-                        <h4>Current Word:</h4> <div id="currentWord"></div>
-                        <h4>Losses:</h4> <div id="losses"></div>
-                        <h4>All Guesses:</h4> <div id="guesses"></div>
-                    </td>
-                </tr>
-            </tbody>
-
+              </td>
+            </tr>
+          </tbody>
         </table>
-    </main>
-    <!--Footer-->
-    <footer class="footer">
-        <div class="container"></div>
-    </footer>
-    <!--Javascript-->
-    <script src="/assests/javascript/game.js"> type="text/javascript"</script>
-   
-   <script>
-        startGame();
-        refreshScreen();
-    
-    </script>
+      </main>
+  
+  <!--Footer-->
+  <footer class="footer">
+    <div class="container"></div>
+  </footer>
+
+  <!--Javascript-->
+  <script src="assests/javascript/game.js" type="text/javascript"></script>
 </body>
+
 </html>
